# consum-api

./: .gitignore  Cargo.toml  Cargo.toml.backup  README.md  benchmark.yml  curlformat.txt  q
.github/: dependabot.yml
http-api-problem/: Cargo.toml
src/: auth.rs  configuration.rs  connection_manager.rs  db.rs  errors.rs  handlers.rs  http_compat.rs  main.rs  model.rs  problem.rs  repository.rs  serialization.rs  service.rs  service_main.rs  startup.rs  url_part_utf8_string.rs  windows_service_main.rs
