[package]
name = "consum-api"
version = "0.1.0"
authors = ["Oleksii R <arodionow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "full"] }
warp = { version = "0.3" }
once_cell = "1"
tiberius = { version = "0.9", features=["chrono", "tds73", "rust_decimal", "sql-browser-tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }
# pretty_env_logger = "0.4"
log = "0.4"
anyhow = "1"
thiserror = "1"
http-api-problem = { version = "0.52", features=["warp"] }
serde = { version = "1.0", features = ["derive"] }
bb8 = "0.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
fern = "0.6"
percent-encoding = "2.1"
jsonwebtoken = "8.1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.4"

[features]
default = []
run-windows-service = []

[profile.release]
opt-level="s"
lto=true