[package]
name = "consum-api"
version = "0.2.0"
authors = ["Oleksii R <arodionow@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "full"] }
warp = { version = "0.3" }
tiberius = { version = "0.12", features=["chrono", "tds73", "rust_decimal", "sql-browser-tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }
# pretty_env_logger = "0.4"
log = "0.4"
anyhow = "1"
thiserror = "2"
http-api-problem = { version = "0.60", features=["warp"] }
serde = { version = "1.0", features = ["derive"] }
bb8 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
fern = "0.7"
percent-encoding = "2.3"
jsonwebtoken = "9"
http = "1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[features]
default = []
run-windows-service = []

[profile.release]
opt-level="s"
lto=true